# tvm-ffi

./: .asf.yaml  .clang-tidy  .cmake-format.json  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  KEYS  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci_mainline_only.yml  ci_test.yml  orcjit-publish.yml  orcjit-tests.yml  publish_orcjit_wheel.yml  publish_wheel.yml  torch_c_dlpack.yml  tvm-ffi-orcjit.yml  tvm_ffi_orcjit.yml
addons/ast-testsuit/: README.md  ast_roundtrip_check.py  run_multi_python.sh
addons/torch_c_dlpack_ext/: README.md  build_aot_wheels.bat  build_aot_wheels.sh  build_backend.py  pyproject.toml
addons/tvm-ffi-orcjit/: CMakeLists.txt  ORCJIT_PRIMER.md  README.md  pyproject.toml
addons/tvm-ffi-orcjit/examples/quick-start/: CMakeLists.txt  README.md  add.cc  add_c.c  compile.sh  run.py
addons/tvm-ffi-orcjit/include/tvm/ffi/orcjit/: orcjit_dylib.h  orcjit_session.h
addons/tvm-ffi-orcjit/python/tvm_ffi_orcjit/: __init__.py  _ffi_api.py  dylib.py  session.py
addons/tvm-ffi-orcjit/scripts/: install_llvm.ps1  install_llvm.sh
addons/tvm-ffi-orcjit/src/ffi/: orcjit_dylib.cc  orcjit_dylib.h  orcjit_session.cc  orcjit_session.h  orcjit_utils.h
addons/tvm-ffi-orcjit/tests/: CMakeLists.txt  README.md  __init__.py  build_test_objects.py  conftest.py  run_all_tests.py  test_basic.py
addons/tvm-ffi-orcjit/tests/sources/: test_funcs_conflict.cc
addons/tvm-ffi-orcjit/tests/sources/c/: test_link_order_caller.c
addons/tvm-ffi-orcjit/tests/sources/cc/: test_error.cc
addons/tvm-ffi-orcjit/tools/: install_llvm.ps1  install_llvm.sh
addons/tvm_ffi_orcjit/: CMakeLists.txt  ORCJIT_PRIMER.md  README.md  pyproject.toml
addons/tvm_ffi_orcjit/examples/quick-start/: CMakeLists.txt  README.md  add.cc  add_c.c  run.py
addons/tvm_ffi_orcjit/python/tvm_ffi_orcjit/: __init__.py  _ffi_api.py  session.py
addons/tvm_ffi_orcjit/src/ffi/: orcjit_dylib.cc  orcjit_dylib.h  orcjit_memory_manager.cc  orcjit_memory_manager.h  orcjit_session.cc  orcjit_session.h  orcjit_slab.cc  orcjit_slab.h  orcjit_utils.h
addons/tvm_ffi_orcjit/src/ffi/llvm_patches/: README.md  gotpcrelx_fix.cc  gotpcrelx_fix.h  init_fini_plugin.cc  init_fini_plugin.h  macho_cxa_atexit_shim.cc  macho_cxa_atexit_shim.h  win_coff_pdata_strip.cc  win_coff_pdata_strip.h  win_dll_import_generator.cc  win_dll_import_generator.h
addons/tvm_ffi_orcjit/tests/: CMakeLists.txt  README.md  __init__.py  conftest.py  run_all_tests.py  test_basic.py  test_memory_manager.py  utils.py
addons/tvm_ffi_orcjit/tests/sources/c/: test_call_global.c  test_ctor_dtor.c  test_error.c  test_funcs.c  test_funcs2.c  test_funcs_conflict.c  test_link_order_base.c  test_types.c
addons/tvm_ffi_orcjit/tests/sources/cc/: test_call_global.cc  test_ctor_dtor.cc  test_funcs.cc  test_funcs2.cc  test_link_order_base.cc  test_link_order_caller.cc  test_types.cc
addons/tvm_ffi_orcjit/tests/sources/cuda/: test_funcs.cu
cmake/: tvm_ffi-config.cmake
cmake/Utils/: AddGoogleTest.cmake  AddLibbacktrace.cmake  CxxWarning.cmake  DetectTargetTriple.cmake  Library.cmake  Sanitizer.cmake
docs/: .rstcheck.cfg  README.md  conf.py  index.rst  requirements.txt
docs/_stubs/: cpp_index.rst
docs/concepts/: abi_overview.md  abi_overview.rst  func_module.rst  structural_eq_hash.rst
docs/get_started/: quick_start.md
docs/guides/: compiler_integration.md  cpp_guide.md  kernel_library_guide.rst  packaging.md  python_guide.md  python_lang_guide.md
examples/cubin_launcher/: CMakeLists.txt  README.md  example_embedded_cubin.py  example_file_cubin.py  example_triton_cubin.py  main.py
examples/cubin_launcher/src/: kernel.cu  lib_dynamic.cc  lib_embedded.cc
examples/inline_module/: main.py
examples/packaging/: CMakeLists.txt  README.md  run_example.py
examples/python_packaging/: run_example.py
examples/quick_start/: CMakeLists.txt  README.md  requirements.txt  run_example.py  run_example.sh
examples/quick_start/src/: add_one_c.c  add_one_cpu.cc  add_one_cuda.cu  run_example.cc  run_example_cuda.cc
examples/quickstart/: CMakeLists.txt  README.md  raw_compile.sh  run_all_cpu.sh  run_all_cuda.sh
examples/quickstart/compile/: add_one_cpu.cc  add_one_cuda.cu
examples/quickstart/load/: load_cpp.cc  load_cuda.cc  load_cupy.py  load_numpy.py  load_pytorch.py
examples/stable_c_abi/: CMakeLists.txt  README.md  raw_compile.sh  run_all.sh
examples/stable_c_abi/src/: add_one_cpu.c  load.c
mlir/: README.md  codegen.py  generate_add_one_c.py  kernel_spec.py  main.c  main.py  type_builder.py  utils.py
python/tvm_ffi/: __init__.py  _convert.py  _dtype.py  _dunder.py  _ffi_api.py  _ffi_api.pyi  _optional_torch_c_dlpack.py  _pyast_colored_print.py  _pyast_translator.py  _tensor.py  access_path.py  base.py  config.py  container.py  core.pyi  error.py  ir_traits.py  libinfo.py  module.py  py.typed  pyast.py  registry.py  serialization.py  stream.py  structural.py  testing.py
rust/: Cargo.toml  README.md
rust/tvm-ffi/: Cargo.toml  build.rs
rust/tvm-ffi-macros/: Cargo.toml
rust/tvm-ffi-sys/: Cargo.toml  build.rs
scripts/: benchmark_dlpack.py
src/ffi/: backtrace.cc  backtrace_utils.h  backtrace_win.cc  container.cc  dtype.cc  error.cc  function.cc  object.cc  object_internal.h
tests/cpp/: CMakeLists.txt  test_any.cc  test_array.cc  test_base.cc  test_error.cc  test_example.cc  test_expected.cc  test_function.cc  test_map.cc  test_metadata.cc  test_object.cc  test_optional.cc  test_reflection.cc  test_rvalue_ref.cc  test_shape.cc  test_string.cc  test_tensor.cc  test_tuple.cc  test_variant.cc  testing_object.h
tests/docker/: Dockerfile
tests/lint/: check_asf_header.py  check_file_type.py  check_version.py  clang_tidy_precommit.py  git-clang-format.sh
tests/python/: test_access_path.py  test_build.cc  test_build.h  test_build.py  test_build_inline.py  test_container.py  test_container_dlpack_conversion.py  test_cubin_launcher.py  test_current_work_stream_gpu.py  test_dataclass_c_class.py  test_dataclass_common.py  test_dataclass_compare.py  (+34 more)
(+185 files in other folders)
