# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["scikit-build-core>=0.10.0", "apache-tvm-ffi"]
build-backend = "scikit_build_core.build"

[project]
name = "tvm-ffi-orcjit"
version = "0.1.0"
description = "Load TVM-FFI exported object files using LLVM ORC JIT v2"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "TVM-FFI OrcJIT Contributors" }]
keywords = ["tvm-ffi", "llvm", "jit", "orcjit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: C++",
]
dependencies = ["apache-tvm-ffi>=0.1.0"]

[project.urls]
Homepage = "https://github.com/apache/tvm-ffi"
Repository = "https://github.com/apache/tvm-ffi"

[tool.scikit-build]
cmake.version = "CMakeLists.txt"
cmake.build-type = "Release"
wheel.py-api = "py3"
build-dir = "build"
build.verbose = true
editable.rebuild = false
editable.verbose = true
wheel.packages = ["python/tvm_ffi_orcjit"]
wheel.install-dir = "tvm_ffi_orcjit"
# Don't set install-dir, let it use the default python/ directory
sdist.include = [
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/CMakeLists.txt",
  "/include/**/*.h",
  "/src/**/*.cc",
  "/src/**/*.cpp",
  "/python/**/*.py"
]

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"
