# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["scikit-build-core>=0.10.0", "apache-tvm-ffi"]
build-backend = "scikit_build_core.build"

[project]
name = "tvm-ffi-orcjit"
version = "0.1.0"
description = "Load TVM-FFI exported object files using LLVM ORC JIT v2"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "TVM-FFI OrcJIT Contributors" }]
keywords = ["tvm-ffi", "llvm", "jit", "orcjit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
]
dependencies = ["apache-tvm-ffi>=0.1.0"]

[project.urls]
Homepage = "https://github.com/apache/tvm-ffi"
Repository = "https://github.com/apache/tvm-ffi"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.py-api = "py3"
build-dir = "build"
build.verbose = true
editable.rebuild = false
editable.verbose = true
wheel.packages = ["python/tvm_ffi_orcjit"]
wheel.install-dir = "tvm_ffi_orcjit"
sdist.include = [
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/CMakeLists.txt",
  "/src/**/*.h",
  "/src/**/*.cc",
  "/src/**/*.cpp",
  "/python/**/*.py",
  "/tools/*.sh",
  "/tools/*.ps1",
]

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"

[tool.cibuildwheel]
# One build per platform is sufficient: the shared library does not link against
# Python C API, so wheel.py-api = "py3" produces a version-agnostic wheel.
build = "cp312-*"
skip = "*-win32 *-manylinux_i686 *-musllinux*"

[tool.cibuildwheel.linux]
environment = { LLVM_VERSION = "22.1.0", CMAKE_PREFIX_PATH = "/opt/llvm", LLVM_CONFIG_PATH = "/opt/llvm/bin/llvm-config" }
repair-wheel-command = "auditwheel repair --exclude libtvm_ffi.so -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
environment = { LLVM_VERSION = "22.1.0", CMAKE_PREFIX_PATH = "/opt/llvm", LLVM_CONFIG_PATH = "/opt/llvm/bin/llvm-config" }
repair-wheel-command = "delocate-wheel --ignore-missing-dependencies --exclude libtvm_ffi.dylib -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
environment = { LLVM_VERSION = "22.1.0", CMAKE_PREFIX_PATH = "C:/opt/llvm/Library;C:/opt/llvm", LLVM_CONFIG_PATH = "C:/opt/llvm/Library/bin/llvm-config.exe" }
